fix navbar title at the bottom on safari;

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -87,14 +87,15 @@ html, body {
   margin-top: 20px;
 }
 
-.navbar-title{
-  color: white;
+.navbar-header .navbar-text{
+  color: #ffffff;
   text-align: center;
   font-size: 24px;
   font-weight: normal;
   line-height: 1.428571429;
   margin-top: 14px;
-  margin-left: 20px;
+  margin-left: 170px;
+  position: absolute;
 }
 
 .authentication {
